--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,1 +1,12 @@
-/**/
+header{
+    font-size: 40px;
+    font-weight: bold;
+}
+
+footer{
+    font-size: 15px;
+}
+
+header, footer{
+    text-align: center;
+}
