--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,1 +1,11 @@
-<!---->
+    </main>
+
+    <footer>
+        Bajai SZC Türr István Technikum - 13.A szoft
+    </footer>
+
+    </div>
+        <!--<script src="../assets/js/fullcalendar.min.js"></script> -->
+        <!--<script src="../assets/js/chart.js"></script> -->
+    </body>
+</html>
