--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,1 +1,17 @@
-<!---->
+<!DOCTYPE html>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Item Rental App</title>
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/app.css">
+    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+</head>
+<body data-bs-theme="dark">
+    <div class="container">
+        <header>
+            Item Rental App
+        </header>
+        <%- include('navbar') %>
+        <main>
