--- a/views/message.ejs
+++ b/views/message.ejs
@@ -1,1 +1,6 @@
-<!---->
+<% if (session.msg) { %>
+    <div class="alert alert-<%= session.severity %> alert-dismissible fade show" role="alert">
+        <%= session.msg %>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+<% } %>
