--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Item Rental App</title>
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/app.css">
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
 </head>
