--- a/views/items.ejs
+++ b/views/items.ejs
@@ -1,3 +1,32 @@
 <%- include("header.ejs") %>
 
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Title</th>
+            <th>Type</th>
+            <th>Status</th>
+            <th>CRUD</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% results.forEach((item, index) => { %>
+            <tr>    
+                <td><%= (index+1) %>.</td>
+                <td><%= item.title %></td>
+                <td><%= item.type %></td>
+                <td><%= item.available %></td>
+                <td><button class="btn btn-primary">Rent</button> <button class="btn btn-danger"><i class="bi bi-trash3"></i></button></td>
+            </tr>
+
+        <% }); %>
+    </tbody>
+    <tfoot>
+        <tr>
+            <td colspan="5" class="text-center">Total: <%= total %> items</td>
+        </tr>
+    </tfoot>
+</table>
+
 <%- include("footer.ejs") %>
