--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,6 +6,7 @@
     <title>Item Rental App</title>
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/app.css">
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
 </head>
