--- a/views/items.ejs
+++ b/views/items.ejs
@@ -1,5 +1,36 @@
-<%- include("header.ejs") %>
+<%- include("header.ejs") %>&nbsp;
 
+<%- include('message') %>
+
+<% if(session.isLoggedIn == true && session.userRole == "admin") {%>
+<div class="accordion mb-3 mt-3" id="accordionExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+          New Item
+        </button>
+      </h2>
+      <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+            <form action="/items/upload" method="post">
+                <div class="mb-3">
+                  <label for="Title" class="form-label">Title</label>
+                  <input type="text" class="form-control" name="title">
+                </div>
+
+                <select class="form-select mb-3" aria-label="Default select example" name="type">
+                    <option selected disabled>Choose a type</option>
+                    <option value="film">film</option>
+                    <option value="könyv">könyv</option>
+                  </select>
+
+                <button type="submit" value="upload" name="uploadBtn" class="btn btn-primary">Upload</button>
+              </form>
+        </div>
+      </div>
+    </div>
+  </div>
+<% } %>
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -17,7 +48,11 @@
                 <td><%= item.title %></td>
                 <td><%= item.type %></td>
                 <td><%= item.available %></td>
-                <td><button class="btn btn-primary">Rent</button> <button class="btn btn-danger"><i class="bi bi-trash3"></i></button></td>
+                <td>
+                    <button class="btn btn-primary">Rent</button>
+                    <a href="./itemDelete/<%= item.id %>" class="btn btn-danger"><i class="bi bi-trash3"></i></a>
+                    <a href="./itemUpdate/<%= item.id %>" class="btn btn-warning"><i class="bi bi-pencil"></i></a>
+                </td>
             </tr>
 
         <% }); %>
