--- a/views/items.ejs
+++ b/views/items.ejs
@@ -36,9 +36,9 @@
         <tr>
             <th>#</th>
             <th>Title</th>
-            <th>Type</th>
-            <th>Status</th>
-            <th>CRUD</th>
+            <th class="text-center">Type</th>
+            <th class="text-center">Status</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -46,12 +46,14 @@
             <tr>    
                 <td><%= (index+1) %>.</td>
                 <td><%= item.title %></td>
-                <td><%= item.type %></td>
-                <td><%= item.available %></td>
-                <td>
+                <td class="text-center"><%= item.type %></td>
+                <td class="text-center"><%= item.available %></td>
+                <td class="text-end">
                     <button class="btn btn-primary">Rent</button>
+                    <%if(session.isLoggedIn==true && session.userRole=="admin") {%>
                     <a href="./itemDelete/<%= item.id %>" class="btn btn-danger"><i class="bi bi-trash3"></i></a>
                     <a href="./itemUpdate/<%= item.id %>" class="btn btn-warning"><i class="bi bi-pencil"></i></a>
+                    <% }%>
                 </td>
             </tr>
 
