--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -13,7 +13,7 @@
 
             <% if (session.isLoggedIn) { %>
                 <a class="nav-link" href="/items">Items</a>
-                <a class="nav-link" href="/borrowedItems">Borrowed Items</a>
+                <a class="nav-link" href="/rentals">Borrowed Items</a>
                 
                 <% if (session.userRole == "admin") { %>
                     <a class="nav-link" href="/users">Users</a>
