update(item, user)

--- a/views/itemUpdate.ejs
+++ b/views/itemUpdate.ejs
@@ -5,13 +5,18 @@
 <form action="/items/itemUpdate/<%= id %>" method="post">
     <div class="mb-3">
       <label for="Title" class="form-label">Title</label>
-      <input type="text" class="form-control" name="title">
+      <input type="text" class="form-control" name="title" value="<%= results[0].title %>">
     </div>
 
     <select class="form-select mb-3" aria-label="Default select example" name="type">
         <option selected disabled>Choose a type</option>
-        <option value="film">film</option>
-        <option value="könyv">könyv</option>
+        <% if (results[0].type == "film") { %>
+          <option selected value="film">film</option>
+          <option value="könyv">könyv</option>
+        <% } else { %>
+          <option value="film">film</option>
+          <option selected value="könyv">könyv</option>
+        <% } %>
       </select>
 
     <button type="submit" value="upload" name="uploadBtn" class="btn btn-primary">Upload</button>
