--- a/views/userUpdate.ejs
+++ b/views/userUpdate.ejs
@@ -5,13 +5,18 @@
 <form action="/users/userUpdate/<%= id %>" method="post">
     <div class="mb-3">
       <label for="name" class="form-label">Name</label>
-      <input type="text" class="form-control" name="name">
+      <input type="text" class="form-control" name="name" value="<%= results[0].name%>">
     </div>
 
-    <select class="form-select mb-3" aria-label="Default select example" name="role">
-        <option selected disabled>Choose a role</option>
-        <option value="admin">admin</option>
-        <option value="user">user</option>
+      <select class="form-select mb-3" aria-label="Default select example" name="role">
+        <option selected disabled>Choose a type</option>
+        <% if (results[0].role == "admin") { %>
+          <option selected value="admin">admin</option>
+          <option value="user">user</option>
+        <% } else { %>
+          <option value="admin">admin</option>
+          <option selected value="user">user</option>
+        <% } %>
       </select>
 
     <button type="submit" value="upload" name="uploadBtn" class="btn btn-primary">Update</button>
