item kölcsönzés, visszaadás

--- a/views/itemDelete.ejs
+++ b/views/itemDelete.ejs
@@ -6,7 +6,7 @@
 
 <form action="/items/itemDelete/<%= id %>" method="post" class="text-center mb-3">
     <p>Are you sure you want to delete?</p>
-    <input type="submit" class="btn btn-danger" value="Törlés">
+    <input type="submit" class="btn btn-danger" value="Delete item">
     <a href="/items" class="btn btn-secondary">Back...</a>
 </form>
 
