--- a/views/itemUpdate.ejs
+++ b/views/itemUpdate.ejs
@@ -19,7 +19,7 @@
         <% } %>
       </select>
 
-    <button type="submit" value="upload" name="uploadBtn" class="btn btn-primary">Upload</button>
+    <button type="submit" value="upload" name="uploadBtn" class="btn btn-primary">Update</button>
     <a href="/items" class="btn btn-secondary">Back...</a>
   </form>
 
