--- a/views/items.ejs
+++ b/views/items.ejs
@@ -2,7 +2,7 @@
 
 <%- include('message') %>
 
-<% if(session.isLoggedIn == true && session.userRole == "admin") {%>
+<% if (session.isLoggedIn == true && session.userRole == "admin") {%>
 <div class="accordion mb-3 mt-3" id="accordionExample">
     <div class="accordion-item">
       <h2 class="accordion-header">
@@ -37,29 +37,52 @@
             <th>#</th>
             <th>Title</th>
             <th class="text-center">Type</th>
+
+            <% if (session.isLoggedIn == true && session.userRole == "admin") {%>
             <th class="text-center">Status</th>
+            <% } %>
+
             <th></th>
         </tr>
     </thead>
     <tbody>
+      <% if (session.isLoggedIn == true && session.userRole == "admin") {%>
+        <% results.forEach((item, index) => { %>
+          <tr>    
+            <td><%= (index+1) %>.</td>
+            <td><%= item.title %></td>
+            <td class="text-center"><%= item.type %></td>
+            <td class="text-center"><%= item.available %></td>
+  
+            <td class="text-end">
+              <form action="/items/rent/<%= item.id %>" method="post">
+                <% if (item.available == 1)  { %>
+                <button type="submit" value="upload" name="uploadBtn" class="btn btn-primary">Rent</button>
+                <% } %>
+                <a href="./itemDelete/<%= item.id %>" class="btn btn-danger"><i class="bi bi-trash3"></i></a>
+                <a href="./itemUpdate/<%= item.id %>" class="btn btn-warning"><i class="bi bi-pencil"></i></a>
+              </form>
+            </td>
+          </tr>
+        <% }); %>
+      <% } %>
+
+      <% if (session.isLoggedIn == true && session.userRole == "user") { %>
         <% results.forEach((item, index) => { 
-          if(item.available == 1) {%>
-            <tr>    
+          if (item.available == 1) { %>
+            <tr>
                 <td><%= (index+1) %>.</td>
                 <td><%= item.title %></td>
                 <td class="text-center"><%= item.type %></td>
-                <td class="text-center"><%= item.available %></td>
                 <td class="text-end">
-                    <button class="btn btn-primary">Rent</button>
-                    <%if(session.isLoggedIn==true && session.userRole=="admin") {%>
-                    <a href="./itemDelete/<%= item.id %>" class="btn btn-danger"><i class="bi bi-trash3"></i></a>
-                    <a href="./itemUpdate/<%= item.id %>" class="btn btn-warning"><i class="bi bi-pencil"></i></a>
-                    <% }%>
+                  <form action="/items/rent/<%= item.id %>" method="post">
+                    <button type="submit" value="upload" name="uploadBtn" class="btn btn-primary">Rent</button>
+                  </form>
                 </td>
             </tr>
           <% } %>
-
         <% }); %>
+      <% } %>
     </tbody>
     <tfoot>
         <tr>
