--- a/views/rentalDelete.ejs
+++ b/views/rentalDelete.ejs
@@ -2,11 +2,11 @@
 
 <%- include('message') %>
 
-<h4 class="text-center mt-3">Delete rent</h4>
+<h4 class="text-center mt-3">Return rented item</h4>
 
 <form action="/rentals/rentalDelete/<%= id %>" method="post" class="text-center mb-3">
-    <p>Are you sure you want to delete this user?</p>
-    <input type="submit" class="btn btn-danger" value="Törlés">
+    <p>Are you sure you want to return this item?</p>
+    <input type="submit" class="btn btn-danger" value="Return item">
     <a href="/rentals" class="btn btn-secondary">Back...</a>
 </form>
 
