--- a/views/userDelete.ejs
+++ b/views/userDelete.ejs
@@ -6,7 +6,7 @@
 
 <form action="/users/userDelete/<%= id %>" method="post" class="text-center mb-3">
     <p>Are you sure you want to delete this user?</p>
-    <input type="submit" class="btn btn-danger" value="Törlés">
+    <input type="submit" class="btn btn-danger" value="Delete user">
     <a href="/users" class="btn btn-secondary">Back...</a>
 </form>
 
